--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,10 @@
 
-
 /*--------------------------------General Styles*/
+
+body {
+    background-color: black;
+    font-family: 'Open Sans', sans-serif;
+}
 
 .uppercase {
     text-transform: uppercase;
@@ -10,24 +14,22 @@
     text-align: center;
 }
 
-
 /*--------------------------------Heading*/
 
 .navbar {
     background: #3760b8;
-    color: #fafafa;
     width: 100%;
     margin-bottom: 0;
     border:0;
-
 }
 
 .navbar .logo {
         font-weight: bold;
-        font-size: 1.5rem;
+        font-size: 2rem;
         color: #fafafa; 
+        text-decoration: none;
+        font-family: 'Raleway', sans-serif;
 }
-
 
 /*--------------------------------Home page*/
 
@@ -41,18 +43,18 @@
     -o-background-size: cover;
 }
 
-.home-container .jumbotron {
-    background-color: transparent !important;
-}
 .homepage-header {
     font-weight: 500;
+    margin-top: 50px;
+    background: transparent !important;
+    
 }
 
 /*---------------------------------About*/
 
 .about-container {
     margin-top: 50px;
-    height: 100vh;
+    
     background: url(../images/davidgray4.jpg) no-repeat bottom center;
     background-size: cover;
     -moz-background-size: cover;
@@ -66,22 +68,29 @@
     margin-bottom: 20px;
 }
 
+
 .about-paragraph {
+    height: 400px;
     color: #fff;
     background-color: transparent !important;
+    overflow-y: scroll;
 }
 
 /*---------------------------------Music*/
 
 .music-container {
     margin-top: 50px;
-    background-color: #99738e;
+    background: url(../images/davidgray2.jpg) no-repeat bottom center;
+    background-size: cover;
+    -moz-background-size: cover;
+    -webkit-background-size: cover;
+    -o-background-size: cover;
 }
 
 .music-heading {
     margin-top: 100px;
     margin-bottom: 20px;
-    color: #fff;
+    color: black;
 }
 
 .music-grid {
@@ -95,7 +104,7 @@
 
 .video-container {
     margin-top: 50px;
-    background: url(../images/white_ladder_20th_anniversary.jpg) no-repeat top center;
+    background: url(../images/a_new_day_at_midnight_background.jpg) no-repeat top center;
     background-size: cover;
     -moz-background-size: cover;
     -webkit-background-size: cover;
@@ -134,11 +143,12 @@
     font-size: 1.5em;
 }
 
-
 /*---------------------------------Sign Up*/
 
 .signup-container {
     padding-top: 60px;
+    background-color: black;
+    color: white;
 }
 
 .format-form {
@@ -155,13 +165,9 @@ footer {
     bottom: 0;
     width: 100%;
     text-align: center;
-    background-color: #99738e;
+    background-color: #3760b8;
     padding-top: 30px;
     padding-bottom: 10px;
-}
-
-.social-media-links {
-    
 }
 
 .social-media-links  li a i {
@@ -181,9 +187,14 @@ footer {
 }
 
 .social-media-links li a i:hover {
-    background-color: #50565e;
+    background-color: black;
 }
 
 /*---------------------------------Media Queries*/
 
-@media (max-)
+@media screen and (min-width: 768px) {
+    .about-container {
+        height: 100vh;
+    }
+}
+    
